--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,23 @@
 {
-  "name": "server",
-  "module": "src/index.ts",
-  "type": "module",
-  "devDependencies": {
-    "bun-types": "^0.5.0"
-  },
-  "dependencies": {
-    "koa": "^2.14.1",
-    "koa-router": "^12.0.0",
-    "node-fetch": "^3.3.1"
-  }
+    "name": "server",
+    "module": "src/index.ts",
+    "type": "module",
+    "scripts": {
+        "build": "tsc --build",
+        "test": "jest",
+        "start": "node ./dist/server.js",
+        "dev": "nodemon src/server.ts",
+        "prettier": "npx prettier --write .",
+        "prepare": "husky install"
+    },
+    "devDependencies": {
+        "bun-types": "^0.5.0"
+    },
+    "dependencies": {
+        "@types/node": "^18.15.3",
+        "koa": "^2.14.1",
+        "koa-router": "^12.0.0",
+        "node-fetch": "^3.3.1",
+        "tslib": "^2.5.0"
+    }
 }
