--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,11 @@
 {
     "name": "server",
     "module": "src/index.ts",
-    "type": "module",
     "scripts": {
         "build": "tsc --build",
         "test": "jest",
-        "start": "node ./dist/server.js",
-        "dev": "nodemon src/server.ts",
-        "prettier": "npx prettier --write .",
-        "prepare": "husky install"
+        "start": "node ./dist/index.js",
+        "dev": "nodemon index.ts"
     },
     "devDependencies": {
         "bun-types": "^0.5.0"
