--- a/server/package.json
+++ b/server/package.json
@@ -8,13 +8,16 @@
         "dev": "nodemon index.ts"
     },
     "devDependencies": {
-        "bun-types": "^0.5.0"
+        "bun-types": "^0.5.0",
+        "typescript": "^5.0.2"
     },
     "dependencies": {
         "@types/node": "^18.15.3",
         "koa": "^2.14.1",
         "koa-router": "^12.0.0",
         "node-fetch": "^3.3.1",
+        "ts-node-dev": "^2.0.0",
+        "tsc": "^2.0.4",
         "tslib": "^2.5.0"
     }
 }
