--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,19 +1,15 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "ES6",
-        "sourceMap": false,
-        "esModuleInterop": true,
-        "declaration": true,
-        "outDir": "./dist",
-        "noImplicitAny": false,
-        "allowJs": true,
-        "strict": true,
-        "importHelpers": true
-    },
-    "exclude": [
-        "node_modules",
-        "dist",
-        "__tests__"
-    ]
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "ES6",
+    "sourceMap": false,
+    "esModuleInterop": true,
+    "declaration": true,
+    "outDir": "./dist",
+    "noImplicitAny": false,
+    "allowJs": true,
+    "strict": true,
+    "importHelpers": true
+  },
+  "exclude": ["node_modules", "dist", "__tests__"]
 }
