copy html file to dist as well

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -12,6 +12,8 @@ RUN pnpm install
 
 RUN pnpm run build
 
+COPY ./server/routes/home/home.html ./server/dist/routes/home/home.html
+
 EXPOSE 8080
 
 CMD ["pnpm", "run", "start"]
