--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@koa/cors": "^4.0.0",
     "@types/node": "^18.15.3",
+    "axios": "^1.3.4",
     "koa": "^2.14.1",
     "koa-router": "^12.0.0",
     "node-fetch": "^3.3.1",
