--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,16 +2,12 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-RUN npm install -g pnpm
-
 COPY package*.json ./
 
 COPY . .
 
-RUN pnpm install
-
-RUN pnpm run build
+RUN npm install
 
 EXPOSE 8080
 
-CMD ["pnpm", "run", "start"]
+CMD ["node", "./dist/index.js"]
